# pipe-logger-lib

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci-version.yml  ci.yml
src/: build_error.rs  compression_method.rs  compression_worker.rs  lib.rs  rotate_method.rs  rotated_file.rs
tests/: logger.rs
