[package]
name = "pipe-logger-lib"
version = "1.1.14"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/pipe-logger-lib"
homepage = "https://magiclen.org/pipe-logger-lib"
keywords = ["logger", "log", "pipe", "rotation", "logrotate"]
categories = ["development-tools::debugging"]
description = "Stores, rotates, compresses process logs."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
chrono = "0.4.4"
regex = "1.0.5"
xz2 = "0.1.5"
path-absolutize = "3"