[package]
name = "pipe-logger-lib"
version = "1.1.16"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/magiclen/pipe-logger-lib"
homepage = "https://magiclen.org/pipe-logger-lib"
keywords = ["logger", "log", "pipe", "rotation", "logrotate"]
categories = ["development-tools::debugging"]
description = "Stores, rotates, compresses process logs."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
regex = "1.0.5"
xz2 = "0.1.5"
path-absolutize = "3"
