[package]
name = "pipe-logger-lib"
version = "2.0.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/magiclen/pipe-logger-lib"
homepage = "https://magiclen.org/pipe-logger-lib"
keywords = ["logger", "log", "pipe", "rotation", "logrotate"]
categories = ["development-tools::debugging"]
description = "Stores, rotates, compresses process logs."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
liblzma = "0.4"
path-absolutize = "4"
